<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">ODK-X Services</string>
    <string name="services_notice">ODK-X Services provides database, file access, and data synchronization services to all ODK-X applications.</string>
    <string name="action_admin_settings">Admin Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_sync">Sync</string>
    <string name="action_change_user">Change User/Logout</string>
    <string name="action_resolve_conflict">Resolve Conflicts</string>
    <string name="action_verify_server_settings">Update User Permissions</string>
    <string name="all_conflicts_notice">Please wait - scanning for conflicts&#8230;</string>
    <string name="all_tables_scanned_for_conflicts">All tables have been scanned for conflicts</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="take_local">Take Local Version</string>
    <string name="take_server">Take Server Version</string>
    <string name="mark_resolved">Mark Resolved</string>
    <string name="resolve_cannot_complete_message">A value has not been chosen for every conflicting column. The row cannot be resolved.</string>
    <string name="conflict_local_was_deleted_explanation">You have deleted a row someone else has edited.</string>
    <string name="conflict_server_was_deleted_explanation">Another user has deleted a row you have edited.</string>
    <string name="conflict_resolve_or_choose">Another user has edited the same row you have edited.</string>
    <string name="radio_button_message_restore_local_deleted">Restore and resolve.</string>
    <string name="radio_button_message_delete_local_deleted">Ignore changes, delete on server.</string>
    <string name="radio_button_message_restore_server_deleted">Restore and resolve.</string>
    <string name="radio_button_message_delete_server_deleted">Delete and lose local changes.</string>
    <string name="conflict_take_local_warning">Overwrite all server changes with the local changes?</string>
    <string name="conflict_take_server_warning">Overwrite all local changes with the server changes?</string>
    <string name="conflict_take_local_with_deltas_warning">Overwrite local and server changes with the selected values?</string>
    <string name="conflict_delete_local_confirmation_warning">Delete the row and lose your local changes?</string>
    <string name="conflict_delete_on_server_confirmation_warning">Delete row on server?</string>
    <string name="checkpoint_restore_complete_or_take_newest">Restore to earlier Finalized state or Save checkpoint as Incomplete</string>
    <string name="checkpoint_restore_incomplete_or_take_newest">Restore to previous Incomplete Save or Save checkpoint as Incomplete</string>
    <string name="checkpoint_remove_or_take_newest">Discard or Save checkpoint as Incomplete</string>
    <string name="select_checkpoint_to_resolve">Select the row with checkpoints to resolve</string>
    <string name="no_items_display_checkpoints">Please wait&#8230;\nSearching for checkpoint rows to resolve.</string>
    <string name="checkpoint_take_all_oldest_or_remove">Discard All Checkpoints</string>
    <string name="checkpoint_take_all_newest">Update All Checkpoints to Incomplete State</string>
    <string name="silently_resolved_single_checkpoint">A checkpoint on an unmodifiable row was
        silently rolled back.</string>
    <string name="silently_resolved_checkpoints">%1$d checkpoints on unmodifiable rows were
        silently rolled back.</string>
    <string name="checkpoint_radio_local">Apply:</string>
    <string name="checkpoint_radio_server">Restore:</string>
    <string name="checkpoint_take_oldest">Discard Checkpoint</string>
    <string name="checkpoint_take_oldest_remove">Discard</string>
    <string name="checkpoint_take_oldest_finalized">Restore to prior Finalized State</string>
    <string name="checkpoint_take_oldest_incomplete">Restore to prior Incomplete State</string>
    <string name="checkpoint_take_newest">Apply all changes and Save as Incomplete</string>
    <string name="checkpoint_take_newest_with_deltas">Apply Indicated Changes and Save as Incomplete</string>
    <string name="checkpoint_delete_warning">Delete entirely?</string>
    <string name="checkpoint_take_oldest_warning">Discard the Checkpoint and Proceed?</string>
    <string name="checkpoint_take_newest_warning">Save all changes as Incomplete and Proceed?</string>
    <string name="checkpoint_take_newest_with_deltas_warning">Apply Indicated Changes, Save as Incomplete and Proceed?</string>
    <string name="checkpoint_auto_apply">No user-defined field differences &#8212; automatically discarding checkpoint.</string>
    <string name="checkpoint_auto_apply_all">No user-defined field differences in any rows\nAutomatically discarded checkpoints.</string>
    <string name="select_conflict_to_resolve">Select the row with conflicts to resolve</string>
    <string name="no_items_display_conflicts">Please Wait&#8230;\nSearching for conflicting rows to resolve.</string>
    <string name="conflict_take_all_local_updates">Take Local Version - Reject All Server Changes</string>
    <string name="conflict_take_all_server_updates">Take Server Version - Discard Local Changes</string>
    <string name="silently_resolved_single_conflict">A conflict on an unmodifiable row was
        silently resolved using the server\'s changes.</string>
    <string name="silently_resolved_conflicts">%1$d conflicts on unmodifiable rows were silently
        resolved using the server\'s changes.</string>
    <string name="conflict_resolving_all">Resolving All Conflicts</string>
    <string name="resolving_row_n_of_m">Resolving row %1$d of %2$d</string>
    <string name="resolver_already_active">Action already in progress</string>
    <string name="done_resolving_rows">Completed</string>
    <string name="conflict_radio_local">Local:</string>
    <string name="conflict_radio_server">Server:</string>
    <string name="conflict_take_local_updates">Take Local Version</string>
    <string name="conflict_take_server_updates">Take Server Version</string>
    <string name="conflict_take_local_with_deltas">Merge Changes as Indicated Below</string>
    <string name="conflict_restore_with_server_changes">Restore local record with server updates</string>
    <string name="conflict_restore_with_local_changes">Restore server record with local updates</string>
    <string name="conflict_enforce_local_delete">Delete record on server</string>
    <string name="conflict_apply_delete_from_server">Delete local record</string>
    <string name="conflict_auto_apply">No user-defined field differences &#8212; automatically taking server metadata revisions.</string>
    <string name="conflict_auto_apply_all">No user-defined field differences in any rows.\nAutomatically took server revisions.</string>
    <string name="conflict_database_consistency_error">Database consistency issue when resolving conflicts &#8212; contact the ODK Team</string>
    <string name="resolve_row_display_name">Form: %1$s Instance: %2$s</string>
    <string name="sync_notification_channel_name">Sync Notification (%1$s)</string>
    <string name="sync_ticker">ODK-X Syncing</string>
    <string name="sync_foreground_text">ODK-X is syncing an Application</string>
    <string name="sync_in_progress">Syncing in progress&#8230;</string>
    <string name="sync_app_level_files">Syncing application configuration&#8230;</string>
    <string name="sync_table_level_files">Syncing table and form configuration&#8230;</string>
    <string name="sync_row_data">Syncing data&#8230;</string>
    <string name="sync_communications_error">A communications error occurred</string>
    <string name="sync_device_internal_error">An internal error occurred</string>
    <string name="sync_resync_because_config_reset_error">The server config was reset during this sync. Please restart.</string>
    <string name="sync_user_authorization_failure">User authorization failure</string>
    <string name="sync_server_configuration_failure">Server configuration failure</string>
    <string name="sync_server_url">Server URL</string>
    <string name="verify_server_settings_header">Permissions</string>
    <string name="click_to_verify_server_settings">Verify user permissions</string>
    <string name="admin_access_settings">Tap for admin access to settings</string>
    <string name="user_access_preferences">User can change General Settings items:</string>
    <string name="change_admin_password">Change Admin Password</string>
    <string name="click_to_change_password">Click to change password</string>
    <string name="new_user">Authenticate New User</string>
    <string name="logout">Log Out</string>
    <string name="enter_new_user">Enter new username:</string>
    <string name="enter_new_password">Enter new password:</string>
    <string name="admin_password_disabled">Admin password disabled</string>
    <string name="general_settings">General Settings</string>
    <string name="admin_general_settings">Admin Access to Settings</string>
    <string name="opendatakit_website">Open Data Kit user documentation</string>
    <string name="click_to_web">Tap to visit https://docs.odk-x.org</string>
    <string name="server_settings_summary">User identity, authentication and server configuration</string>
    <string name="server">Server</string>
    <string name="server_url">Server URL</string>
    <string name="change_server_url">Server URL</string>
    <string name="restrict_server_settings_summary">Limit non-Admin ability to change Server Settings</string>
    <string name="restrict_server">Manage ability to change Server Settings</string>
    <string name="credential">Server Sign-on Credential</string>
    <string name="change_credential">Change Sign-on Credential</string>
    <string name="username_password">Username and/or Password</string>
    <string name="username">Username</string>
    <string name="change_username">ODK-X Username</string>
    <string name="password">Server Password</string>
    <string name="testing_support">Non-Production (Test) Settings:</string>
    <string name="non_secure_authentication">Allow unsafe/unsecured Authentication</string>
    <string name="non_secure_summary">Authenticate over http: (testing support)</string>
    <string name="restrict_device_settings_summary">Limit non-Admin ability to change Device Settings</string>
    <string name="restrict_device">Manage ability to change Device Settings</string>
    <string name="device_settings_summary">Device-specific Configuration</string>
    <string name="device">Device Settings</string>
    <string name="default_locale">Default Locale</string>
    <string name="change_default_locale">Change Default Locale</string>
    <string name="font_size">Text Font Size</string>
    <string name="change_font_size">Text Font Size</string>
    <string name="show_splash">Show Splash Screen</string>
    <string name="show_splash_summary">Shows when application starts</string>
    <string name="splash_path">Selected Splash Image</string>
    <string name="default_splash_path">ODK-X Default</string>
    <string name="tool_tables_settings">Tables-specific Settings</string>
    <string name="tool_tables_settings_summary">ODK-X Tables-specific settings</string>
    <string name="admin_tool_tables_settings">Manage ability to change Tables-specific Settings</string>
    <string name="admin_tool_tables_settings_summary">Limit non-Admin ability to change Tables-specific Settings</string>
    <string name="clear_configuration_settings">Reset configuration</string>
    <string name="exit_admin_mode">Exit admin mode</string>
    <string name="click_to_clear_settings">Click to clear settings</string>
    <string name="click_to_exit_admin_settings">Click to exit admin settings</string>
</resources>