<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:icon="@drawable/filesetting"
        android:title="@string/opendatakit_website"
        android:summary="@string/click_to_web"
        android:id="@+id/open_documentation"
        android:key="@string/key_documentation" />

    <PreferenceScreen
        android:fragment="org.opendatakit.services.preferences.fragments.ServerSettingsFragment"
        android:icon="@drawable/cloud"
        android:title="@string/server"
        android:summary="@string/server_settings_summary" />

    <PreferenceScreen
        android:fragment="org.opendatakit.services.preferences.fragments.DeviceSettingsFragment"
        android:icon="@drawable/deviceper"
        android:title="@string/device"
        android:summary="@string/device_settings_summary" />

    <PreferenceScreen
        android:fragment="org.opendatakit.services.preferences.fragments.TablesSettingsFragment"
        android:icon="@drawable/tablesetting"
        android:title="@string/tool_tables_settings"
        android:summary="@string/tool_tables_settings_summary" />

    <!-- this is visible if admin mode is not enabled OR if in admin mode -->
    <PreferenceScreen
        android:id="@+id/admin_password_status"
        android:fragment="org.opendatakit.services.preferences.fragments.AdminPasswordSettingsFragment"
        android:icon="@drawable/userper"
        android:title="@string/change_admin_password"
        android:summary="@string/admin_password_disabled"
        android:key="@string/key_admin_password" />

    <!-- these are visible if in admin mode -->
    <PreferenceScreen
        android:fragment="org.opendatakit.services.preferences.fragments.AdminConfigurableServerSettingsFragment"
        android:icon="@drawable/ic_cloud_black_24dp"
        android:title="@string/restrict_server"
        android:summary="@string/restrict_server_settings_summary"
        android:key="@string/key_admin_server_settings" />
    <PreferenceScreen
        android:fragment="org.opendatakit.services.preferences.fragments.AdminConfigurableDeviceSettingsFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/restrict_device"
        android:summary="@string/restrict_device_settings_summary"
        android:key="@string/key_admin_device_settings" />
    <PreferenceScreen
        android:fragment="org.opendatakit.services.preferences.fragments.AdminConfigurableTablesSettingsFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/admin_tool_tables_settings"
        android:summary="@string/admin_tool_tables_settings_summary"
        android:key="@string/key_admin_tables_settings" />

    <!-- special handling for this - it is visible if adminEnabled -->
    <PreferenceScreen
        android:fragment="org.opendatakit.services.preferences.fragments.AdminPasswordChallengeFragment"
        android:id="@+id/general_settings_in_admin_mode"
        android:icon="@drawable/userper"
        android:title="@string/admin_general_settings"
        android:summary="@string/admin_access_settings"
        android:key="@string/key_admin_general_settings" />

    <PreferenceScreen
        android:id="@+id/clear_configuration_settingss"
        android:icon="@drawable/deletefile"
        android:title="@string/clear_configuration_settings"
        android:summary="@string/click_to_clear_settings"
        android:key="@string/key_reset_config" >

        <intent
            android:action="android.intent.action.EDIT"
            android:targetPackage="org.opendatakit.services"
            android:targetClass="org.opendatakit.services.preferences.activities.ClearAppPropertiesActivity" />
    </PreferenceScreen>
    <PreferenceScreen
        android:id="@+id/exit_admin_mode"
        android:icon="@drawable/ic_exit_24dp"
        android:title="@string/exit_admin_mode"
        android:summary="@string/click_to_exit_admin_settings"
        android:key="@string/key_exit_admin_settings" >

    </PreferenceScreen>

    <PreferenceScreen
        android:id="@+id/verify_server_settingss"
        android:icon="@drawable/user"
        android:title="@string/verify_server_settings_header"
        android:summary="@string/click_to_verify_server_settings"
        android:key="@string/key_verify_settings">

        <intent
            android:action="android.intent.action.EDIT"
            android:targetPackage="org.opendatakit.services"
            android:targetClass="org.opendatakit.services.sync.actions.activities.VerifyServerSettingsActivity" />
    </PreferenceScreen>
</PreferenceScreen>