<?xml version="1.0" encoding="utf-8"?>
<preference-headers
        xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- if the header has an 'adminMode' extra then it is
         only displayed when viewed in admin mode.
         if the header has an 'adminEnabled' extra then it is
         visible based upon the value matching whether or not
         an admin password has been set.
    -->

    <header android:icon="@drawable/ic_launch_black_24dp"
            android:title="@string/opendatakit_website"
            android:summary="@string/click_to_web">
        <intent android:action="android.intent.action.VIEW"
                android:data="http://opendatakit.org" />
    </header>

    <header
            android:fragment="org.opendatakit.services.preferences.fragments.ServerSettingsFragment"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/server"
            android:summary="@string/server_settings_summary">
        <extra android:name="appName" android:value="bogus"/>
    </header>

    <header android:fragment="org.opendatakit.services.preferences.fragments.DeviceSettingsFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/device"
            android:summary="@string/device_settings_summary">
        <extra android:name="appName" android:value="bogus"/>
    </header>

    <header android:fragment="org.opendatakit.services.preferences.fragments.TablesSettingsFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/tool_tables_settings"
            android:summary="@string/tool_tables_settings_summary">
        <extra android:name="appName" android:value="bogus"/>
    </header>


    <!-- this is visible if admin mode is not enabled OR if in admin mode -->
    <header
            android:id="@+id/admin_password_status"
            android:fragment="org.opendatakit.services.preferences.fragments.AdminPasswordSettingsFragment"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/change_admin_password"
            android:summary="@string/admin_password_disabled">
        <extra android:name="appName" android:value="bogus"/>
        <extra android:name="adminEnabled" android:value="false"/>
        <extra android:name="adminMode" android:value="true"/>
    </header>

    <!-- these are visible if in admin mode -->
    <header
            android:fragment="org.opendatakit.services.preferences.fragments.AdminConfigurableServerSettingsFragment"
            android:icon="@drawable/ic_cloud_black_24dp"
            android:title="@string/restrict_server"
            android:summary="@string/restrict_server_settings_summary">
        <extra android:name="appName" android:value="bogus"/>
        <extra android:name="adminMode" android:value="true"/>
    </header>
    <header android:fragment="org.opendatakit.services.preferences.fragments.AdminConfigurableDeviceSettingsFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/restrict_device"
            android:summary="@string/restrict_device_settings_summary">
        <extra android:name="appName" android:value="bogus"/>
        <extra android:name="adminMode" android:value="true"/>
    </header>
    <header
            android:fragment="org.opendatakit.services.preferences.fragments.AdminConfigurableTablesSettingsFragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/admin_tool_tables_settings"
            android:summary="@string/admin_tool_tables_settings_summary">
        <extra android:name="appName" android:value="bogus"/>
        <extra android:name="adminMode" android:value="true"/>
    </header>


    <!-- special handling for this - it is visible if adminEnabled -->
    <header android:id="@+id/general_settings_in_admin_mode"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/admin_general_settings"
            android:summary="@string/admin_access_settings">
    </header>

    <header android:id="@+id/clear_configuration_settingss"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/clear_configuration_settings"
            android:summary="@string/click_to_clear_settings">
        <intent android:action="android.intent.action.EDIT"
                android:targetPackage="org.opendatakit.services"
                android:targetClass="org.opendatakit.activities.ClearAppPropertiesActivity" />
    </header>

    <header android:id="@+id/verify_server_settingss"
            android:icon="@drawable/ic_verified_user_black_24dp"
            android:title="@string/verify_server_settings_header"
            android:summary="@string/click_to_verify_server_settings">
        <intent android:action="android.intent.action.EDIT"
                android:targetPackage="org.opendatakit.services"
                android:targetClass="org.opendatakit.sync.activities.VerifyServerSettingsActivity" />
    </header>

</preference-headers>