<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.opendatakit.services.MainActivity">

    <item
        android:id="@+id/action_sync"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:icon="@drawable/ic_cached_black_24dp"
        android:title="@string/action_sync"/>

    <item
            android:id="@+id/action_settings"
            android:orderInCategory="50"
            android:showAsAction="never"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>

    <item
            android:id="@+id/action_about"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/action_about"/>

</menu>
